# luacpp

./: .gitmodules  README.md
include/: luacpp
include/luacpp/: basic_types  entity  function  luacpp  state  table  types  vector
include/src/: calls.hpp  exceptions.hpp  lua_afx.hpp  stack_pusher.hpp  stack_reader.hpp  state.hpp  state_base.hpp
src/: declarations.hpp  entity.hpp  function.hpp  iterable.hpp  stack_adapter.hpp  stack_value.hpp  state.hpp  state_base.hpp  static_table.hpp  table.hpp  tuple_utils.hpp  type_adapter.hpp  vector.hpp
src/entities/: boolean.hpp  floating.hpp  integral.hpp  string.hpp  table.hpp
src/type_policies/: boolean.hpp  floating.hpp  integral.hpp  optional.hpp  optional_floating.hpp  optional_integral.hpp  optional_string.hpp  pointer.hpp  static_table_field.hpp  string.hpp  vector.hpp
src/types/: boolean.hpp  floating.hpp  integral.hpp  numeric.hpp  string.hpp  table.hpp
test/: CMakeLists.txt  luacpp_test.cpp
